--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,12 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link href="https://fonts.googleapis.com/icon?family=Ubuntu|Material+Icons" rel="stylesheet">
-    <title>pwa-vuejs</title>
+    <title>Application VueJS</title>
+    <style>
+      body {
+        background-color: #8EC5FC;
+      }
+    </style>
   </head>
   <body>
     <noscript>
